--- a/HTML5_and_CSS3/2_1productos.html
+++ b/HTML5_and_CSS3/2_1productos.html
@@ -7,10 +7,11 @@
         <title>Productos - Barberia Alura</title>
         <!-- resetear los estilos por defecto que tienen los navegadores-->
         <link rel="stylesheet" href="reset.css" />
-        <link rel="stylesheet" href="2_2Productos.css" />
+        <link rel="stylesheet" href="2_2style.css" />
     </head>
     <body>
-        <header> <!--Etiqueta para el encabezado-->
+        <header>
+            <!--Etiqueta para el encabezado-->
             <div class="caja">
                 <h1><img src="imagenes/logo.png" /></h1>
                 <!-- nav: etiqueta para referirse al panel de navegacion-->
@@ -24,31 +25,33 @@
             </div>
         </header>
 
-        <main> <!--Etiqueta el cuerpo principal-->
+        <main>
+            <!--Etiqueta el cuerpo principal-->
             <ul class="productos">
                 <li>
                     <h2>Cabello</h2>
-                    <img src="imagenes/cabello.jpg" alt="cabello">
+                    <img src="imagenes/cabello.jpg" alt="cabello" />
                     <p class="productos_descripcion">Con tijera o máquina, a gusto del cliente</p>
-                    <p class="productos_precio">$ 10.00</p>                    
+                    <p class="productos_precio">$ 10.00</p>
                 </li>
                 <li>
                     <h2>Barba</h2>
-                    <img src="imagenes/barba.jpg" alt="barba">
+                    <img src="imagenes/barba.jpg" alt="barba" />
                     <p class="productos_descripcion">Corte y diseño profesional de barba</p>
-                    <p class="productos_precio">$ 08.00</p>                    
+                    <p class="productos_precio">$ 08.00</p>
                 </li>
                 <li>
                     <h2>Cabello + Barba</h2>
-                    <img src="imagenes/cabello+barba.jpg" alt="cabello_barba">
+                    <img src="imagenes/cabello+barba.jpg" alt="cabello_barba" />
                     <p class="productos_descripcion">Paquete completo, corte mas barba</p>
-                    <p class="productos_precio">$ 15.00</p>                    
+                    <p class="productos_precio">$ 15.00</p>
                 </li>
-            </ul>           
+            </ul>
         </main>
 
-        <footer> <!--Etiqueta para el pie de pagina -->
-            <img src="imagenes/logo-blanco.png" alt="logo_pie_pagina">
+        <footer>
+            <!--Etiqueta para el pie de pagina -->
+            <img src="imagenes/logo-blanco.png" alt="logo_pie_pagina" />
             <p class="copyright">&copy Copyright Barbería Alura 2023</p>
         </footer>
     </body>
