--- a/HTML5_and_CSS3/1_1index.html
+++ b/HTML5_and_CSS3/1_1index.html
@@ -52,7 +52,7 @@
             </section>
 
             <section class="diferenciales">
-                <h2 class="centrarTitulo">Diferenciales</h2>
+                <h2 class="titulo_principal">Diferenciales</h2>
                 <!-- <ul>: Indica que se le va a pasar una lista-->
                 <ul>
                     <!-- <li> indica que esto se muestre como una etiqueta -->
