--- a/HTML5_and_CSS3/1_1index.html
+++ b/HTML5_and_CSS3/1_1index.html
@@ -1,4 +1,14 @@
 <!DOCTYPE html>
+<html lang="en">
+    <head>
+        <meta charset="UTF-8" />
+        <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+        <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+        <title>Document</title>
+    </head>
+    <body></body>
+</html>
+<!DOCTYPE html>
 <!--es una declaración importante que ayuda a garantizar que el código HTML se interprete correctamente en los navegadores web.-->
 
 <!-- html: define el inicio de la estructura y el contenido de un documento HTML-->
@@ -10,6 +20,8 @@
         <!-- Etiquetas informativas -->
 
         <meta charset="UTF-8" />
+        <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+        <meta name="viewport" content="width=device-width, initial-scale=1.0" />
         <!--garantiza que los navegadores web muestren correctamente los caracteres especiales y acentos de cualquier idioma en la página web.-->
         <title>Barbería Alura</title>
         <!-- titulo de la pagina, se muestra en la pestaña del navegador -->
