--- a/pruebas/prueba1.html
+++ b/pruebas/prueba1.html
@@ -15,6 +15,7 @@
     <i class="fa fa-gitlab fa-4x icon-3d"></i>
     <i class="fa fa-bitbucket fa-4x icon-3d"></i>
     <i class="fa fa-git fa-4x icon-3d"></i>
+    <i class="fa fa-google fa-4x icon-3d"></i>
 </div>
 
 <div class="flex-center">
@@ -23,5 +24,4 @@
     <i class="fa fa-instagram fa-4x icon-3d"></i>
     <i class="fa fa-whatsapp fa-4x icon-3d"></i>
     <i class="fa fa-linkedin fa-4x icon-3d"></i>
-    Estoy probando bebe
 </div>
