--- a/pruebas/prueba1.html
+++ b/pruebas/prueba1.html
@@ -16,6 +16,7 @@
     <i class="fa fa-bitbucket fa-4x icon-3d"></i>
     <i class="fa fa-git fa-4x icon-3d"></i>
     <i class="fa fa-google fa-4x icon-3d"></i>
+    probando cambios
 </div>
 
 <div class="flex-center">
